apps/bookinfo/ratings/base/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-canary
  labels:
    app: ratings
spec:
  type: ClusterIP
  selector:
    app: ratings
  ports:
    - name: http
      port: 9080
      targetPort: 9080
      protocol: TCP
