apps/bookinfo/ratings/base/service.yaml
# v5（写实化：Service 名保持不变）
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
spec:
  type: ClusterIP
  selector:
    app: ratings                            # 与 canary Service 同值，发布时控制器注入 hash 标签区分两个通道
  ports:
    - name: http
      port: 9080
      targetPort: 9080
      protocol: TCP
